@@ -30,6 +30,7 @@ LoneFox                  lonefox at welho dot com
 Marc 'HE' Brockschmidt   marc at marcbrockschmidt dot de
 Daniel Kasak             dkasak at nusconsulting dot com dot au
 Grant McLean		 grant at mclean dot net dot nz
+Philipp Rumpf		 prumpf at gmail dot com
 
 several important bits of gtk2-perl were heavily inspired by pygtk, gtk-perl,
 and a good read-through of the gtk+ source code, so credit goes to those guys
